-Fixed the icon bug on firefox
Former-commit-id: b4f4e24b6461a3a713299237e565e10c89dcd86a

--- a/assets/less/icons.less
+++ b/assets/less/icons.less
@@ -304,55 +304,56 @@
     background-position: 0px 0px;
 }
 
+@backgroundPosX: -30px;
 .edware-icon-partial, .edware-icon-invalid, .edware-icon-standardized {
     background-image: url("../images/icons/invalidPartialIcons/sprite.png");
     width: 22px;
     height: 22px;
-    background-position-x: -30px;
 }
 
 .edware-icon-standardized {
-    background-position-y: -2px;
+    background-position: @backgroundPosX -2px;
 }
 
 .edware-icon-invalid {
-    background-position-y: -32px;
+    background-position: @backgroundPosX -32px;
 }
 
 .edware-icon-partial {
-    background-position-y: -62px;
+    background-position: @backgroundPosX -62px;
 }
 
 .edware-icon-large {
     width: 26px;
     height: 26px;
-    background-position-x: 0px;
+    @backgroundPosX: 0;
     &.edware-icon-standardized {
-        background-position-y: 0px;
+        background-position: @backgroundPosX 0px;
     }
 
     &.edware-icon-invalid {
-        background-position-y: -30px;
+        background-position: @backgroundPosX -30px;
     }
 
     &.edware-icon-partial {
-        background-position-y: -60px;
+        background-position: @backgroundPosX -60px;
     }
 }
 
 .edware-icon-small {
     width: 18px;
     height: 18px;
-    background-position-x: -56px;
+    background-position: -56px;
+    @backgroundPosX: -56px;
     &.edware-icon-standardized {
-        background-position-y: -4px;
+        background-position: @backgroundPosX -4px;
     }
 
     &.edware-icon-invalid {
-        background-position-y: -34px;
+        background-position: @backgroundPosX -34px;
     }
 
     &.edware-icon-partial {
-        background-position-y: -64px;
+        background-position: @backgroundPosX -64px;
     }
 }
